<resources>
    <string name="app_name">WarRoom</string>

    <string name="challenge_title">Choix du combat</string>
    <string name="challenge_image_description">Challenge image</string>
    <string name="challenge_sport_title">Sport</string>
    <string name="challenge_intellectual_title">Intellectuel</string>
    <string name="challenge_talk_title">Discussion</string>
    <string name="unavailable_challenge">Fonctionnalité indisponible pour le moment</string>

    <string name="challenge_form_username">Pseudo</string>
    <string name="challenge_form_username_hint">Pseudo adversaire</string>
    <string name="challenge_form_date">Date</string>
    <string name="challenge_form_date_hint">04/03/2023</string>
    <string name="challenge_form_reason">Motif</string>
    <string name="challenge_form_reason_hint">Motif du litige</string>
    <string name="challenge_form_description">Description</string>
    <string name="challenge_form_description_hint">Trash talk</string>

    <string name="sport_challenge_form_title">Sport Challenge</string>
    <string name="sport_challenge_form_message">En attente du partenaire…</string>
    <string name="sport_challenge_form_validate_button">Retour</string>

    <string name="sport_challenge_receiver_win">T\'as gagné !</string>
    <string name="sport_challenge_receiver_lose">Aah la lose !</string>

    <string name="challenge_form_wrong_pseudo">Cet adversaire n\'existe pas</string>
    <string name="challenge_form_wrong_date_fomat">Le format de la date n\'est pas valide</string>

    <string name="forgot_password"><u>Mot de passe oublié</u></string>
    <string name="forgot_pwd">Mot de passe oublié</string>
    <string name="desc_forgot_password">Veuillez saisir votre email afin de réinitialiser votre mot de passe</string>
    <string name="e_mail">E-Mail</string>
    <string name="resend_password">Renvoyer mon mot de passe</string>
    <string name="bg">bg</string>
    <string name="welcome">Bienvenue !</string>
    <string name="login_desc">Veuillez vous connecter ou créer un nouveau compte pour utiliser l’application.</string>
    <string name="password">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="register_button">Créer un nouveau compte</string>
    <string name="register">Inscription</string>
    <string name="desc_register">Veuillez saisir ces différentes informations, afin que vos listes soient sauvegardées.</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="verif_password">Vérification du mot de passe</string>
    <string name="home">Accueil</string>
    <string name="sport_challenge_title">Défi : WorkOut !</string>
    <string name="sport_challenge_desc">Vous avez 15 secondes pour faire un maximum de SQUAT !</string>
    <string name="sport_challenge_instruction">TAP TON ECRAN</string>
</resources>