<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_red">

    <ImageView
        android:contentDescription="@string/bg"
        android:id="@+id/bg_pattern"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_image" />

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="#000"
        app:fontFamily="@font/googlesansbold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/description_text"
        android:layout_marginTop="10dp"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/login_desc"
        android:textSize="18sp"
        android:textColor="#000"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/mail_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/e_mail"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#fff"
        android:background="@color/red"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:autofillHints="emailAddress"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@color/red"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/mail_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:background="@color/darker_red"
        android:text="@string/login_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#ff0000"
        app:fontFamily="@font/googlesansbold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lighter_red"
        android:text="@string/register_button"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_marginBottom="10dp"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
