<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_edit_ic">

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd"
        android:textSize="30sp"
        android:textColor="#fff"
        app:fontFamily="@font/googlesansbold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/description_text"
        android:layout_marginTop="10dp"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/desc_forgot_password"
        android:textSize="18sp"
        android:textColor="#fff"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/e_mail"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#fff"
        android:background="@drawable/rounded_corner"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="#fff"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/forgot_password_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/resend_password"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
