<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_edit_ic">


    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:textColor="#fff"
        app:fontFamily="@font/googlesansbold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/description_text"
        android:layout_marginTop="10dp"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/desc_register"
        android:textSize="18sp"
        android:textColor="#fff"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:autofillHints="username"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#fff"
        android:background="@drawable/rounded_corner"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/e_mail"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#fff"
        android:background="@drawable/rounded_corner"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintTop_toBottomOf="@+id/username_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner"
        app:fontFamily="@font/proximaniva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_input">

        <EditText
            android:id="@+id/verif_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/verif_password"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:autofillHints="emailAddress"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            app:fontFamily="@font/proximaniva"
            android:background="@drawable/rounded_corner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/icon_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/verif_password_input"
            android:padding="20dp"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/alert_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/alert_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/white"
        app:fontFamily="@font/googlesansbold"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
